# hyperchoron

./: .gitattributes  .gitignore  Cargo.toml  MANIFEST.in  README.md  hyperchoron.py  mappings.py  pyproject.toml  rendering.py  requirements.txt  run_examples.py  setup.cfg  setup.py  test.csv
examples/: README.md  bad_apple.litematic  bm_septette_for_the_dead_princess.litematic  bm_shanghai_teahouse.litematic  bm_u_n_owen.litematic  brainiac_maniac.litematic  cave_story_white.litematic  darude_sandstorm.litematic  la_campanella.litematic  linkin_park_numb.litematic  megalovania.litematic  mk7_rainbow_road.litematic  pachelbel_canon_in_d.litematic  pi.litematic  running_in_the_90s.litematic  rush_e.litematic  sm64_staff_roll.litematic  tau.litematic  toto_africa.litematic  vivaldi_four_seasons.litematic  yonkagor_memory_merge.litematic
examples/input/: bad_apple.7z  bad_apple.mid  bm_u_n_owen.7z  darude_sandstorm.tar  deltarune_a_cybers_world.mid  deltarune_a_dark_zone.mid  deltarune_big_shot.mid  deltarune_black_knife.7z  deltarune_raise_up_your_bat.mid  lava_chicken.mid  mm9_wily1.xm  pokemon_dialgas_fight_to_the_finish.mid  pokemon_soaring_dreams.mid  pokemon_tera_raid_battle.mid  silksong_lost_lace.mid  sm64_staff_roll.mid
examples/litematic/: a_cybers_world.litematic  bad_apple.litematic  battle_against_a_true_hero.litematic  big_shot.litematic  bm_pi.litematic  bm_rush_e.litematic  bm_septette_for_the_dead_princess.litematic  bm_tau.litematic  bm_the_convergence_unify.litematic  bm_u_n_owen.litematic  brainiac_maniac.litematic  bruno_mars_count_on_me.litematic  caramelldansen.litematic  cave_story_moonsong.litematic  cave_story_white.litematic  darude_sandstorm.litematic  deltarune_empty_town.litematic  devourer_of_gods_nonstop_mix.litematic  dialgas_fight_to_the_finish.litematic  gravity_falls_main_theme.litematic  hopes_and_dreams.litematic  in_the_final.litematic  jason_mraz_im_yours.litematic  la_campanella.litematic  lagtrain.litematic  linkin_park_numb.litematic  masked_dedede.litematic  megalovania.litematic  mk7_rainbow_road.litematic  mkw_coconut_mall.litematic  never_gonna_give_you_up.litematic  nsmb_overworld.litematic  pachelbel_canon_in_d.litematic  pokemon_dialgas_fight_to_the_finish.litematic  pokemon_soaring_dreams.litematic  pokemon_tera_raid_battle.litematic  rude_buster.litematic  running_in_the_90s.litematic  sm64_staff_roll.litematic  smb_overworld.litematic  (+9 more)
examples/midi/: bm_tau.litematic  brainiac_maniac.mid  caramelldansen.mid  cave_story_moonsong.mid  cave_story_white.mid  deltarune_black_knife.mid  deltarune_empty_town.mid  deltarune_hammer_of_justice.mid  devourer_of_gods_nonstop_mix.mid  in_the_final.mid  mk7_rainbow_road.mid  mkw_coconut_mall.mid  pvz_grasswalk.mid  vvvvvv_positive_force.mid  yonkagor_memory_merge.mid
hyperchoron/: __init__.py  _version.py  cli.py  dawvert.py  mappings.py  midi.py  minecraft.py  pcm.py  text.py  tracker.py  util.py
hyperchoron/litematic/: Hyperchoron V2 Header.litematic  Hyperchoron V2 Looping.litematic  Hyperchoron V2 Skeleton 1.litematic  Hyperchoron V2 Skeleton 2.litematic  Hyperchoron V2 Skeleton.litematic  Hyperchoron V2 Track.litematic  Hyperchoron V2 Turn 1.litematic  Hyperchoron V2 Turn 2.litematic  Hyperchoron V2 Turn 3.litematic
hyperchoron/minecraft_templates/: Hyperchoron V2 Looping.litematic  Hyperchoron V2 Track.litematic  (+2 more)
lib/: dawvert.py  mappings.py  midi.py  minecraft.py  pcm.py  tracker.py  util.py
src/: lib.rs
(+5 files in other folders)
