[package]
name = "fastmidi"
version = "0.1.0"
# Use the latest stable edition fully supported by current toolchains for publishing wheels.
edition = "2021"

[lib]
name = "fastmidi"
crate-type = ["cdylib"]

[dependencies]
# Enable abi3 (stable Python C-API) from Python 3.10 upwards so one wheel works for 3.10+.
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py310"] }
numpy = "0.27.1"
midly = "0.5.3"

[build-dependencies]
pyo3-build-config = "0.27.2"
